--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lora&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>eCommerce</title>
   </head>
@@ -127,8 +132,8 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="img/pexels-photo-219598.jpeg"
-              class="d-block w-100"
+              src="img/header1.jpg"
+              class="d-block w-100 img-size"
               alt="first slide"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -171,7 +176,7 @@
       </div>
     </div>
 
-    <div class="container-fluid offer pt-3 pb-3 bg-grey d-none d-md-block">
+    <div class="container-fluid offer pt-3 pb-0 bg-grey d-none d-md-block">
       <div class="container">
         <div class="row">
           <div class="col-md-4 m-right">
@@ -612,44 +617,42 @@
         </div>
       </div>
       <div class="row">
-          <div class="col-md-6">
-              <div class="media mt-5">
-                <img src="img/b1.jpg" alt="change" class="img-fluid mr-3" />
-                <div class="media-body">
-                  <h5>Life saver jackets</h5>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem,
-                    sint?
-                  </p>
-                  <p>
-                    <i class="fa fa-user" aria-hidden="true"></i>admin.
-                    Date:12-5-2019
-                  </p>
-                </div>
-              </div>
+        <div class="col-md-6">
+          <div class="media mt-5">
+            <img src="img/b1.jpg" alt="change" class="img-fluid mr-3" />
+            <div class="media-body">
+              <h5>Life saver jackets</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem,
+                sint?
+              </p>
+              <p>
+                <i class="fa fa-user" aria-hidden="true"></i>admin.
+                Date:12-5-2019
+              </p>
             </div>
-            <div class="col-md-6">
-                <div class="media mt-5">
-                  <img src="img/b1.jpg" alt="change" class="img-fluid mr-3" />
-                  <div class="media-body">
-                    <h5>Life saver jackets</h5>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem,
-                      sint?
-                    </p>
-                    <p>
-                      <i class="fa fa-user" aria-hidden="true"></i>admin.
-                      Date:12-5-2019
-                    </p>
-                  </div>
-                </div>
-              </div>
-
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="media mt-5">
+            <img src="img/b1.jpg" alt="change" class="img-fluid mr-3" />
+            <div class="media-body">
+              <h5>Life saver jackets</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem,
+                sint?
+              </p>
+              <p>
+                <i class="fa fa-user" aria-hidden="true"></i>admin.
+                Date:12-5-2019
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
     <div class="container-fluid pt-5 pb-5 bg-light">
-
       <div class="container">
         <div class="row">
           <h4>TRENDS</h4>
@@ -662,115 +665,146 @@
         <div class="row">
           <div class="col-md-3">
             <div class="card">
-              <img src="img/pexels-photo-247206.jpeg" alt="change" class="card-img-top">
+              <img
+                src="img/pexels-photo-247206.jpeg"
+                alt="change"
+                class="card-img-top"
+              />
               <div class="card-body">
                 <h4>Denim pants</h4>
                 <h6>€99.99</h6>
-                <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+                <button class="btn btn-danger">
+                  <i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+                </button>
               </div>
             </div>
           </div>
 
           <div class="col-md-3">
-              <div class="card">
-                <img src="img/pexels-photo-247206.jpeg" alt="change" class="card-img-top">
-                <div class="card-body">
-                  <h4>Denim pants</h4>
-                  <h6>€99.99</h6>
-                  <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+            <div class="card">
+              <img
+                src="img/pexels-photo-247206.jpeg"
+                alt="change"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <h4>Denim pants</h4>
+                <h6>€99.99</h6>
+                <button class="btn btn-danger">
+                  <i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="img/pexels-photo-247206.jpeg"
+                alt="change"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <h4>Denim pants</h4>
+                <h6>€99.99</h6>
+                <button class="btn btn-danger">
+                  <i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="container-fluid pt-5 bg-dark text-light">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <div class="row">
+                <h5>Meta</h5>
+              </div>
+              <div class="row mb-4">
+                <div class="underline bg-light" style="width:50px"></div>
+              </div>
+              <p>
+                <i class="fa fa-chevron-right" aria-hidden="true"></i> Register
+              </p>
+              <p>
+                <i class="fa fa-chevron-right" aria-hidden="true"></i> Log In
+              </p>
+              <p>
+                <i class="fa fa-chevron-right" aria-hidden="true"></i> Enter RSS
+              </p>
+              <p>
+                <i class="fa fa-chevron-right" aria-hidden="true"></i> Comments
+              </p>
+              <p><i class="fa fa-chevron-right" aria-hidden="true"></i> help</p>
+            </div>
+
+            <div class="col-md-3">
+              <div class="row">
+                <h5>Recents Posts</h5>
+              </div>
+              <div class="row mb-4">
+                <div class="underline bg-light" style="width:50px"></div>
+              </div>
+              <div class="row">
+                <div class="media">
+                  <img src="img/b1.jpg" alt="change" class="img-fluid" />
+                  <div class="media-body ml-2">
+                    <h6>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing
+                      elit.quuntur aut, atque blanditiis reiciendis.
+                    </h6>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="media">
+                  <img src="img/b2.jpg" alt="change" class="img-fluid" />
+                  <div class="media-body ml-2">
+                    <h6>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing
+                      elit.quuntur aut, atque blanditiis reiciendis.
+                    </h6>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="col-md-3">
-                <div class="card">
-                  <img src="img/pexels-photo-247206.jpeg" alt="change" class="card-img-top">
-                  <div class="card-body">
-                    <h4>Denim pants</h4>
-                    <h6>€99.99</h6>
-                    <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
-                  </div>
-                </div>
+              <div class="row">
+                <h5>About</h5>
               </div>
-        </div>
-      </div>
-      
-    </div>
-
-    <footer>
-        <div class="container-fluid pt-5 bg-dark text-light">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-3">
-                <div class="row">
-                  <h5>Meta</h5>
-                </div>
-                <div class="row mb-4">
-                  <div class="underline bg-light" style="width:50px"></div>
-                </div>
-                <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Register</p>
-                <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Log In</p>
-                <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Enter RSS</p>
-                <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Comments</p>
-                <p><i class="fa fa-chevron-right" aria-hidden="true"></i> help</p>
+              <div class="row mb-4">
+                <div class="underline bg-light" style="width:50px"></div>
               </div>
-
-
-              <div class="col-md-3">
-                <div class="row">
-                  <h5>Recents Posts</h5>
-                </div>
-                <div class="row mb-4">
-                  <div class="underline bg-light" style="width:50px"></div>
-                </div>
-                <div class="row">
-                  <div class="media">
-                    <img src="img/b1.jpg" alt="change" class="img-fluid">
-                    <div class="media-body ml-2">
-                      <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.quuntur aut, atque blanditiis reiciendis.</h6>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                    <div class="media">
-                      <img src="img/b2.jpg" alt="change" class="img-fluid">
-                      <div class="media-body ml-2">
-                        <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.quuntur aut, atque blanditiis reiciendis.</h6>
-                      </div>
-                    </div>
-                  </div>
-              </div>
-
-              <div class="col-md-3">
-
-                  <div class="row">
-                      <h5> About</h5>
-                    </div>
-                    <div class="row mb-4">
-                      <div class="underline bg-light" style="width:50px"></div>
-                    </div>
-                <div class="row">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus dignissimos, vero unde magnam eligendi laborum placeat corporis in odio nesciunt, earum mollitia laboriosam impedit nulla.</p>
-                </div>
-              </div>
-              <div class="col-md-3">
-                  <div class="row">
-                      <h5>Tags</h5>
-                    </div>
-                    <div class="row mb-4">
-                      <div class="underline bg-light" style="width:50px"></div>
-                    </div>
-                    <button class="btn btn-outline-light">Autum</button>
-                    <button class="btn btn-outline-light">Jackets</button>
-                    <button class="btn btn-outline-light">Gloves</button>
-
-
+              <div class="row">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ducimus dignissimos, vero unde magnam eligendi laborum placeat
+                  corporis in odio nesciunt, earum mollitia laboriosam impedit
+                  nulla.
+                </p>
               </div>
             </div>
+            <div class="col-md-3">
+              <div class="row">
+                <h5>Tags</h5>
+              </div>
+              <div class="row mb-4">
+                <div class="underline bg-light" style="width:50px"></div>
+              </div>
+              <button class="btn btn-outline-light">Autum</button>
+              <button class="btn btn-outline-light">Jackets</button>
+              <button class="btn btn-outline-light">Gloves</button>
+            </div>
           </div>
-
         </div>
+      </div>
     </footer>
 
     <script
