--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link href="https://fonts.googleapis.com/css?family=Domine&display=swap" rel="stylesheet">
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lora&display=swap"
@@ -32,15 +34,13 @@
       <div class="container-fluid bg-black header-top d-none d-md-block">
           <div class="container">
             <div class="row text-light pt-2 pb-0">
-              <div class="col-md-5">
-                  <p id="demo">The Sale Ends In</p>
+              <div class="col-md-7">
+                  <p class="demo">Authentic Cafe Collection</p>
               </div>
               <div class="col-md-3"></div>
+              
               <div class="col-md-2">
-                <i class="fa fa-user-o" aria-hidden="true"></i> <a href="login.html">Account</a>
-              </div>
-              <div class="col-md-2">
-                <i class="fa fa-cart-plus" aria-hidden="true"></i> My cart - €0.00
+                <a href="login.html"><i class="fa fa-user-o" aria-hidden="true"></i>Sign In </a>
               </div>
             </div>
           </div>
@@ -49,7 +49,7 @@
     
     <div class="container-fluid bg-black">
       <nav class="container navbar navbar-expand-lg navbar-dark bg-black">
-        <a class="navbar-brand active" href="index.html">ACR</a>
+        <a class="navbar-brand active" href="index.html"><i>ACC</i></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -65,7 +65,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="jackets.html"
                 >Jackets <span class="sr-only">(current)</span></a
               >
             </li>
@@ -85,7 +85,7 @@
                 aria-haspopup="true"
                 aria-expanded="false"
               >
-                Sales/Miscellaneous
+                Miscellaneous
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Action</a>
@@ -98,12 +98,12 @@
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input
-              class="form-control mr-sm-2"
+              class="form-control mr-sm-2 form-control-sm"
               type="search"
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
               Search
             </button>
           </form>
@@ -136,7 +136,8 @@
             <div class="carousel-caption d-none d-md-block">
               <h1>Authentic Cafe Collection</h1>
               <p>Genuine Hand-Crafted Attire</p>
-              <button class="btn btn-info btn-lg">Shop Now</button>
+              <a href="jackets.html">
+                <button class="btn btn-info btn-lg">Shop Now</button></a>
             </div>
           </div>
           <div class="carousel-item">
@@ -173,7 +174,7 @@
       </div>
     </div>
 
-    <div class="container-fluid offer pt-3 pb-0 bg-grey d-none d-md-block">
+    <div class="container-fluid offer pt-3 pb-0 as d-none d-md-block">
       <div class="container">
         <div class="row">
           <div class="col-md-4 m-right">
@@ -527,7 +528,7 @@
                 <h4>Kawasaki 1971</h4>
                 <h6>€10,000</h6>
                 <button class="btn btn-danger">
-                  <i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+                  <i class="fa fa-cart-plus" aria-hidden="true"></i>More Info..
                 </button>
               </div>
             </div>
@@ -543,7 +544,7 @@
                 <h4>BMW 1973</h4>
                 <h6>€11,000</h6>
                 <button class="btn btn-danger">
-                  <i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+                  <i class="fa fa-cart-plus" aria-hidden="true"></i>More Info..
                 </button>
               </div>
             </div>
@@ -560,7 +561,7 @@
                 <h4>Honda 1979</h4>
                 <h6>€7000</h6>
                 <button class="btn btn-danger">
-                  <i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+                  <i class="fal fa-info" aria-hidden="true"></i>More Info..
                 </button>
               </div>
             </div>
