--- a/trouser.html
+++ b/trouser.html
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="jackets.html"
                 >Jackets <span class="sr-only">(current)</span></a
               >
             </li>
@@ -56,7 +56,7 @@
               <a class="nav-link" href="trouser.html">Trousers</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Boots</a>
+                <a class="nav-link" href="boots.html">Boots</a>
               </li>
             <li class="nav-item dropdown">
               <a
@@ -86,7 +86,7 @@
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
               Search
             </button>
           </form>
@@ -100,16 +100,20 @@
     
 
 
-<div class="container-fluid">
+<div class="container">
+<h1 class="text-center heading"> <span class="border-bottom  border-dark">Trousers</span> </h1>
+</div>
+   
+
     <div class="row pt-4">     
         <div class="col-md-2">
         <ul class="nav flex-column">
-            <li class="nav-item dropdown"><a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Trousers</a>
+            <li class="nav-item dropdown"><a class="nav-link active" href="trouser.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Trousers</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Jeans</a>
-            <a class="dropdown-item" href="#">Leather</a>      
-            <a class="dropdown-item" href="#">Textile</a>
-            <a class="dropdown-item" href="#">Shorts</a>
+            <a class="dropdown-item" href="trouser.html">All pants</a>
+            <a class="dropdown-item" href="trouser.html">Leather</a>      
+            <a class="dropdown-item" href="trouser.html">Textile</a>
+            <a class="dropdown-item" href="trouser.html">Shorts</a>
             </div>
         </li>
 
@@ -117,7 +121,7 @@
 
             <li class="nav-item dropdown"><a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Jackets</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Leather</a>
+                <a class="dropdown-item" href="jackets.html">All jackets</a>
                 <a class="dropdown-item" href="#">Casual</a>
                 <a class="dropdown-item" href="#">Textile</a>
             </div>
@@ -125,9 +129,10 @@
 
             <li class="nav-item dropdown"><a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Boots</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="boots.html">All Boots</a>
                <a class="dropdown-item" href="#">Race Boots</a>
                <a class="dropdown-item" href="#">Fashion Leather</a>
-               <a class="dropdown-item" href="#">Ankle protection</a>
+               
                <a class="dropdown-item" href="#">Armoured</a>
            </div>
         </li>
@@ -207,9 +212,9 @@
         <div class="card">
             <img src="img/jeans5.jpg" alt="jeans" class="card-img-top img-fluid"/>
             <div class="card-body">
-            <h5>Leather Street Jacket</h5>
-            <h5>€149.99</h5>
-            <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+            <h6>Leather Street Jacket</h6>
+            <h6>€149.99</h6>
+            <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
         </div>      
     </div>
 </div>
@@ -218,9 +223,9 @@
         <div class="card">
         <img src="img/jeans6.jpg" alt="change" class="card-img-top img-fluid"/>
     <div class="card-body">
-    <h5>Padded Leather Jacket</h5>
-    <h5>€269.99</h5>
-    <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+    <h6>Padded Leather Jacket</h6>
+    <h6>€269.99</h6>
+    <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
       </div>
      </div>
     </div>
@@ -229,9 +234,9 @@
         <div class="card">
             <img src="img/jeans7.jpg" alt="change" class="card-img-top img-fluid"/>
             <div class="card-body">
-            <h5>Italian Leather Jacket</h5>
-            <h5>€249.99</h5>
-            <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+            <h6>Italian Leather Jacket</h6>
+            <h6>€249.99</h6>
+            <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
             </div>
         </div>
     </div>
@@ -240,9 +245,9 @@
         <div class="card">
         <img src="img/jeans8.jpg" alt="change" class="card-img-top img-fluid"/>
         <div class="card-body">
-        <h5>Patriot Leather Jacket</h5>
-        <h5>€249.99</h5>
-    <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+        <h6>Patriot Leather Jacket</h6>
+        <h6>€249.99</h6>
+    <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
            </div>
         </div>
     </div>
@@ -251,9 +256,9 @@
             <div class="card">
                 <img src="img/jeans7.jpg" alt="change" class="card-img-top img-fluid"/>
                 <div class="card-body">
-                <h5>Italian Leather Jacket</h5>
-                <h5>€249.99</h5>
-                <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+                <h6>Italian Leather Jacket</h6>
+                <h6>€249.99</h6>
+                <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
                 </div>
             </div>
         </div>
@@ -269,9 +274,9 @@
             <div class="card">
                 <img src="img/jeans5.jpg" alt="jeans" class="card-img-top img-fluid"/>
                 <div class="card-body">
-                <h5>Leather Street Jacket</h5>
-                <h5>€149.99</h5>
-                <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+                <h6>Leather Street Jacket</h6>
+                <h6>€149.99</h6>
+                <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
             </div>      
         </div>
     </div>
@@ -280,9 +285,9 @@
             <div class="card">
             <img src="img/jeans6.jpg" alt="change" class="card-img-top img-fluid"/>
         <div class="card-body">
-        <h5>Padded Leather Jacket</h5>
-        <h5>€269.99</h5>
-        <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+        <h6>Padded Leather Jacket</h6>
+        <h6>€269.99</h6>
+        <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
           </div>
          </div>
         </div>
@@ -291,9 +296,9 @@
             <div class="card">
                 <img src="img/jeans7.jpg" alt="change" class="card-img-top img-fluid"/>
                 <div class="card-body">
-                <h5>Italian Leather Jacket</h5>
-                <h5>€249.99</h5>
-                <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+                <h6>Italian Leather Jacket</h6>
+                <h6>€249.99</h6>
+                <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
                 </div>
             </div>
         </div>
@@ -302,9 +307,9 @@
             <div class="card">
             <img src="img/jeans8.jpg" alt="change" class="card-img-top img-fluid"/>
             <div class="card-body">
-            <h5>Patriot Leather Jacket</h5>
-            <h5>€249.99</h5>
-        <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+            <h6>Patriot Leather Jacket</h6>
+            <h6>€249.99</h6>
+        <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
                </div>
             </div>
         </div>
@@ -313,9 +318,9 @@
                 <div class="card">
                     <img src="img/jeans7.jpg" alt="change" class="card-img-top img-fluid"/>
                     <div class="card-body">
-                    <h5>Italian Leather Jacket</h5>
-                    <h5>€249.99</h5>
-                    <button class="btn btn-danger"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
+                    <h6>Italian Leather Jacket</h6>
+                    <h6>€249.99</h6>
+                    <button class="btn btn-dark btn-sm"><i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart</button>
                     </div>
                 </div>
             </div>
