--- a/login.html
+++ b/login.html
@@ -45,13 +45,13 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
+            <li class="nav-item">
+              <a class="nav-link" href="jackets.html"
                 >Jackets <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Trousers</a>
+              <a class="nav-link" href="trouser.html">Trousers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Boots</a>
