--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
               class="d-block w-100 img-size"
               alt="first slide"
             />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-block half-black ">
               <h1>Authentic Cafe Collection</h1>
               <p>Genuine Hand-Crafted Attire</p>
               <a href="jackets.html">
-                <button class="btn btn-info btn-lg">Shop Now</button></a>
+                <button class="btn btn-dark btn-lg">Shop Now</button></a>
             </div>
           </div>
           <div class="carousel-item">
@@ -506,7 +506,7 @@
       </div>
     </div>
 
-    <div class="container-fluid bg-light-grey pt-5 pb-5">
+    <div class="container-fluid  pt-5 pb-5">
       <div class="container">
         <div class="row">
           <h4>Featured Bikes</h4>
@@ -710,7 +710,7 @@
                 <h5>About</h5>
               </div>
               <div class="row mb-4">
-                <div class="underline bg-light" style="width:50px"></div>
+                <div class="underline bg-dark" style="width:50px"></div>
               </div>
               <div class="row">
                 <p>
