--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
               Search
             </button>
           </form>
